--- a/src/app/collaborators-list/collaborators-list.component.html
+++ b/src/app/collaborators-list/collaborators-list.component.html
@@ -11,7 +11,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let collaborator of collaborators">
+      <tr *ngFor="let collaborator of collaborators()">
         <td>{{ collaborator.name }}</td>
         <td>{{ collaborator.surname }}</td>
         <td>{{ collaborator.email }}</td>
