add second list component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,11 @@
     </app-collaborators-list>
   </div>
 
+  <div class="bullets-wrapper">
+    <app-collaborators-list-bullets >
+    </app-collaborators-list-bullets>
+  </div>
+
   <div class="details-wrapper">
     <app-collaborator-details >
     </app-collaborator-details>
