--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,23 @@
-<div class="workspace" [class.show-details]="selected()">
-  <div class="table-wrapper">
-    <app-collaborators-list >
-    </app-collaborators-list>
+<div class="workspace" [class.show-details]="selectedCollabValue">
+  <div class="left-column">
+    <div class="table-wrapper">
+      <app-collaborators-list></app-collaborators-list>
+    </div>
+
+    <div class="bullets-wrapper">
+      <app-collaborators-list-bullets></app-collaborators-list-bullets>
+    </div>
   </div>
 
-  <div class="bullets-wrapper">
-    <app-collaborators-list-bullets >
-    </app-collaborators-list-bullets>
+  <div>
+    <app-projects-list-component></app-projects-list-component>
   </div>
 
   <div class="details-wrapper">
-    <app-collaborator-details >
-    </app-collaborator-details>
+    <app-collaborator-details></app-collaborator-details>
+  </div>
+
+  <div>
+    <app-project-details></app-project-details>
   </div>
 </div>
