--- a/src/app/collaborator-details/collaborator-details.component.css
+++ b/src/app/collaborator-details/collaborator-details.component.css
@@ -4,7 +4,7 @@
   border-radius: 12px;
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
   max-width: 500px;
-  margin: 0 auto;
+  margin: auto auto;
 }
 
 h2 {
@@ -73,19 +73,3 @@ h2 {
   padding: 1rem;
 }
 
-/* Responsivo */
-@media (max-width: 600px) {
-  .collaborator-card {
-    padding: 1.5rem;
-  }
-
-  .details-button {
-    width: 100%;
-    margin-bottom: 0.5rem;
-  }
-
-  .actions {
-    flex-direction: column;
-    gap: 0.5rem;
-  }
-}
