--- a/src/app/project-details/project-details.component.html
+++ b/src/app/project-details/project-details.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="project() && !editMode" class="project-card">
+<div *ngIf="project() && !editMode" class="details-card">
   <h2>Project Details</h2>
   <div class="details">
     <div class="details-item"><strong>Title:</strong> {{ project()?.title }}</div>
