--- a/src/app/collaborator-details/collaborator-details.component.html
+++ b/src/app/collaborator-details/collaborator-details.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="collaborator() && !editMode" class="collaborator-card">
+<div *ngIf="collaborator() && !editMode" class="details-card">
   <h2>Collaborator Details</h2>
   <div class="details">
     <div class="details-item"><strong>Name:</strong> {{ collaborator()?.name }}</div>
