--- a/src/app/collaborator-details/collaborator-details.component.html
+++ b/src/app/collaborator-details/collaborator-details.component.html
@@ -1,11 +1,11 @@
-<div *ngIf="collaborator() && !editMode" class="details-card">
+<div *ngIf="collaborator && !editMode" class="details-card">
   <h2>Collaborator Details</h2>
   <div class="details">
-    <div class="details-item"><strong>Name:</strong> {{ collaborator()?.name }}</div>
-    <div class="details-item"><strong>Surname:</strong> {{ collaborator()?.surname }}</div>
-    <div class="details-item"><strong>Email:</strong> {{ collaborator()?.email }}</div>
-    <div class="details-item"><strong>Initial Date:</strong> {{ collaborator()?.initDate| date }}</div>
-    <div class="details-item"><strong>End Date:</strong> {{ collaborator()?.endDate| date }}</div>
+    <div class="details-item"><strong>Name:</strong> {{ collaborator.name }}</div>
+    <div class="details-item"><strong>Surname:</strong> {{ collaborator.surname }}</div>
+    <div class="details-item"><strong>Email:</strong> {{ collaborator.email }}</div>
+    <div class="details-item"><strong>Initial Date:</strong> {{ collaborator.initDate| date }}</div>
+    <div class="details-item"><strong>End Date:</strong> {{ collaborator.endDate| date }}</div>
   </div>
   <button class="details-button" (click)="enableEdit()">Edit</button>
 </div>
