fix signals logic

--- a/src/app/components/association-project-collaborator/association-project-collaborator.component.html
+++ b/src/app/components/association-project-collaborator/association-project-collaborator.component.html
@@ -6,7 +6,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let entry of projectAcronymsWithCollaborators">
+    <tr *ngFor="let entry of projectAcronymsWithCollaborators()">
       <td>{{ entry.acronym }}</td>
       <td>{{ entry.collaborators.join(', ') }}</td>
     </tr>
