--- a/src/app/components/projects-list-component/projects-list-component.component.html
+++ b/src/app/components/projects-list-component/projects-list-component.component.html
@@ -10,7 +10,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let project of projectsList">
+            <tr *ngFor="let project of projectsList()">
                 <td>{{project.title}}</td>
                 <td>{{project.acronym}}</td>
                 <td>
