--- a/src/app/components/collaborator-details/collaborator-details.component.html
+++ b/src/app/components/collaborator-details/collaborator-details.component.html
@@ -1,16 +1,16 @@
-<div *ngIf="collaborator && !editMode" class="details-card">
+<div *ngIf="collaborator() && !editMode" class="details-card">
   <h2>Collaborator Details</h2>
   <div class="details">
-    <div class="details-item"><strong>Name:</strong> {{ collaborator.name }}</div>
-    <div class="details-item"><strong>Surname:</strong> {{ collaborator.surname }}</div>
-    <div class="details-item"><strong>Email:</strong> {{ collaborator.email }}</div>
-    <div class="details-item"><strong>Initial Date:</strong> {{ collaborator.initDate| date }}</div>
-    <div class="details-item"><strong>End Date:</strong> {{ collaborator.endDate| date }}</div>
+    <div class="details-item"><strong>Name:</strong> {{ collaborator()?.name }}</div>
+    <div class="details-item"><strong>Surname:</strong> {{ collaborator()?.surname }}</div>
+    <div class="details-item"><strong>Email:</strong> {{ collaborator()?.email }}</div>
+    <div class="details-item"><strong>Initial Date:</strong> {{ collaborator()?.initDate| date }}</div>
+    <div class="details-item"><strong>End Date:</strong> {{ collaborator()?.endDate| date }}</div>
   </div>
   <button class="details-button" (click)="enableEdit()">Edit</button>
 </div>
 
-<div *ngIf="!collaborator" class="empty-state">
+<div *ngIf="!collaborator()" class="empty-state">
   <p>Select a collaborator!</p>
 </div>
 
@@ -20,27 +20,27 @@
 
   <label class="details-item">
     <strong>Name:</strong>
-    <input [(ngModel)]="draft!.name" name="name"/>
+    <input [(ngModel)]="draft()!.name" name="name"/>
   </label>
 
   <label class="details-item">
     <strong>Surname:</strong>
-    <input [(ngModel)]="draft!.surname" name="surname"/>
+    <input [(ngModel)]="draft()!.surname" name="surname"/>
   </label>
 
   <label class="details-item">
     <strong>Email:</strong>
-    <input [(ngModel)]="draft!.email" name="email"/>
+    <input [(ngModel)]="draft()!.email" name="email"/>
   </label>
 
   <label class="details-item">
     <strong>Initial Date:</strong>
-    <input type="date" [(ngModel)]="draft!.initDate" name="initDate" />
+    <input type="date" [(ngModel)]="draft()!.initDate" name="initDate" />
   </label>
 
   <label class="details-item">
     <strong>End Date:</strong>
-    <input type="date" [(ngModel)]="draft!.endDate" name="endDate" />
+    <input type="date" [(ngModel)]="draft()!.endDate" name="endDate" />
   </label>
 
   <div class="actions">
