--- a/src/app/components/collaborators-list/collaborators-list.component.html
+++ b/src/app/components/collaborators-list/collaborators-list.component.html
@@ -9,6 +9,7 @@
         <th>Email</th>
         <th>Details</th>
         <th>Holidays</th>
+        <th>Projects</th>
       </tr>
     </thead>
     <tbody>
@@ -18,6 +19,7 @@
         <td>{{ collaborator.email }}</td>
         <td><button (click)="selectCollaborator(collaborator)" aria-label="See Details" class="details-button">🔍</button>        </td>
         <td><button (click)="showHolidays(collaborator)">🌴</button></td>
+        <td><button (click)="showProjects(collaborator)">See Projects</button></td>
       </tr>
     </tbody>
   </table>
