--- a/src/app/components/holiday-plan-editor/holiday-plan-editor.component.html
+++ b/src/app/components/holiday-plan-editor/holiday-plan-editor.component.html
@@ -1,22 +1,28 @@
-<form *ngIf="draft()" (ngSubmit)="save()" class="details-card">
+<div *ngIf="!draft()" class="empty-state">
+  <p>Select a holiday plan!</p>
+</div>
+
+<div *ngIf="draft() && !editMode()" class="details-card">
+  <h3>Holiday Plan</h3>
+  <div *ngFor="let p of draft()?.periods">
+    From {{ p.initDate | date }} to {{ p.endDate | date }}
+  </div>
+  <button (click)="editMode.set(true)">Edit</button>
+</div>
+
+<form *ngIf="editMode()" (ngSubmit)="save()" class="details-card">
   <h3>Edit Holiday Plan</h3>
 
-  <form *ngIf="draft() as d" (ngSubmit)="save()" class="details-card">
-  <h3>Edit Holiday Plan</h3>
+  <div *ngFor="let pr of draft()!.periods; let i = index">
+    <label>
+      Init Date:
+      <input type="date" [(ngModel)]="draft()!.periods[i].initDate" name="init{{i}}" />
+    </label>
 
-  <div *ngFor="let pr of d.periods; let i = index">
-    <input
-      type="date"
-      [ngModel]="pr.initDate"
-      (ngModelChange)="updatePeriod(i, 'initDate', $event)"
-      name="init{{i}}"
-    />
-    <input
-      type="date"
-      [ngModel]="pr.endDate"
-      (ngModelChange)="updatePeriod(i, 'endDate', $event)"
-      name="end{{i}}"
-    />
+    <label>
+      End Date:
+      <input type="date" [(ngModel)]="draft()!.periods[i].endDate" name="end{{i}}" />
+    </label>
   </div>
 
   <button type="button" (click)="add()">Add Period</button>
