--- a/src/app/components/collaborators-list-bullets/collaborators-list-bullets.component.html
+++ b/src/app/components/collaborators-list-bullets/collaborators-list-bullets.component.html
@@ -1,3 +1,4 @@
+<h2>Collaborators Bullets List</h2>
 <ul class="collaborators-list">
   <li *ngFor="let collaborator of collaboratorsList()" class="collaborator-item">
     <span class="full-name" data-testid="collab-full-name">
