--- a/src/app/components/collaborators-list-bullets/collaborators-list-bullets.component.html
+++ b/src/app/components/collaborators-list-bullets/collaborators-list-bullets.component.html
@@ -5,6 +5,6 @@
       {{ collaborator.name }} {{ collaborator.surname }}
     </span><br>
     <strong>Email:</strong> {{ collaborator.email }}<br>
-    <button (click)="selectCollaborator(collaborator)" aria-label="See Details" class="details-button">🔍</button>
+    <button (click)="selectCollaborator(collaborator)">🔍</button>
   </li>
 </ul>
