--- a/src/app/components/collaborators-list/collaborators-list.component.html
+++ b/src/app/components/collaborators-list/collaborators-list.component.html
@@ -17,9 +17,9 @@
         <td>{{ collaborator.name }}</td>
         <td>{{ collaborator.surname }}</td>
         <td>{{ collaborator.email }}</td>
-        <td><button (click)="selectCollaborator(collaborator)" aria-label="See Details" class="details-button">🔍</button>        </td>
+        <td><button (click)="selectCollaborator(collaborator)">🔍</button></td>
         <td><button (click)="showHolidays(collaborator)">🌴</button></td>
-        <td><button (click)="showProjects(collaborator)">See Projects</button></td>
+        <td><button (click)="showProjects(collaborator)">📝</button></td>
       </tr>
     </tbody>
   </table>
